[package]
name = "stellar-wasm-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.13.0"
static_assertions = "1.1.0"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "d1dc8ce0" }
stellar-contract-env-host = { git = "https://github.com/stellar/rs-stellar-contract-env", rev = "c2b25532aa3fc0e6d2f1f91c5fe6ae260d215c56", features = ["vm"] }
im-rc = { version = "15.0.0", optional = true }
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

# Dunno what any of this does.

[features]
default = ["host_context"]
host_context = ["stellar-xdr/std", "im-rc", "num-bigint", "num-rational"]

[target.debug.features]
default = ["host_context"]

[target.release.features]
default = ["host_context"]

[profile.release]
lto = true
opt-level = 's'
